# profiler

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: develop.yml  release.yml
cmake/: profiler-config.cmake  profiler-config.cmake.in
doc/dox/: main.dox
dox/: examples.dox  groups.dox
examples/: CMakeLists.txt  external.f90  internal.f90
src/: CMakeLists.txt  Doxyfile  Doxyfile.in  profiler.f90  profiler_datetime.f90  profiler_layout.f90  profiler_types.f90  profiler_version.f90  profiler_version.f90.in  program.f90
